<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_fragment"
        app:layout_constraintTop_toBottomOf="@+id/mb_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_container"
        app:layout_constraintTop_toBottomOf="@+id/mb_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>